# PLTM

./: AGENTS.md  homerow_architecture.md  package.json
docs/: homerow_architecture.md  overlay-macos.md  plan.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: accessibility.rs  hotkey.rs  mod.rs  navigation.rs  window.rs
src-tauri/src/error/: app_error.rs
src-tauri/src/models/: config.rs  element.rs  hint.rs  mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/macos/: accessibility.rs  events.rs  mod.rs  overlay.rs
src-tauri/src/services/: accessibility_service.rs  click_service.rs  element_filter_service.rs  hint_service.rs  hotkey_service.rs  mod.rs  pipeline.rs  spatial_index.rs  window_manager.rs
src-tauri/src/state/: app_state.rs
src-tauri/tests/: accessibility_test.rs
src/lib/components/settings/: SettingsPanel.svelte
src/lib/services/: tauri-commands.ts
src/lib/stores/: app-state.ts  hints.ts
src/lib/types/: index.ts
src/routes/: +page.svelte
