[package]
name = "pltm"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "pltm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS Core Graphics & Events
core-graphics = "0.25.0"
cocoa = "0.26.1"

# Core Foundation para CFString, CFDictionary, etc.
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"

# Objective-C Runtime con features para Foundation
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = [
  "NSString",
  "NSBundle",
  "NSAutoreleasePool",
  "NSDictionary",
  "NSArray",
  "NSError"
] }

# Accessibility API
accessibility-sys = "0.2.0"

# Hotkeys globales
global-hotkey = "0.7.0"

# Async runtime
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "2.0.17"

# macOS-specific target dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSWindow", "NSScreen"] }